# RSQTOA

./: .gitignore  README.md  requirements.txt
case_studies/: CMakeLists.txt
case_studies/cpp/: CMakeLists.txt
case_studies/cpp/config/: black_scholes_mc.yml  diffusion.yml  show_case.yml
case_studies/cpp/include/: black_scholes_mc.hpp  diffusion.hpp  rsqtoa_case_study.hpp  show_case.hpp
case_studies/cpp/pybind/: black_scholes_mc_pybind.cpp  diffusion_pybind.cpp  show_case_pybind.cpp
case_studies/cpp/src/: black_scholes_mc.cpp  diffusion.cpp  show_case.cpp
case_studies/python/black_scholes/: black_scholes.py  black_scholes.yml
case_studies/python/diffusion/: diffusion.py  diffusion.yml  diffusion_model.py
case_studies/python/lotka_volterra/: lotka_volterra.py  lotka_volterra.yml
case_studies/python/show_case/: show_case.py  show_case.yml
case_studies/python/show_case_thesis/: show_case_thesis.py  show_case_thesis.yml
case_studies/python/test/ann/: logs.txt  show_case_ann.py
case_studies/python/test/ann/model/: saved_model.pb
case_studies/python/test/ann/model/variables/: variables.data-00000-of-00001  variables.index
case_studies/python/test/ann_thesis/: logs.txt  show_case_ann_theses.py
case_studies/python/test/ann_thesis/model/: saved_model.pb
case_studies/python/test/ann_thesis/model/variables/: variables.index
case_studies/python/test/cubic/: show_case.yml  show_case_cubic.py
case_studies/python/test/linear/: show_case.yml  show_case_linear.py  train_results.csv
case_studies/python/test/nearest_neighbour/: logs.txt  show_case.yml  show_case_nn.py  test_result.csv  train_results.csv
case_studies/python/test/rbf/: logs.txt  show_case.yml  show_case_rbf.py  test_result.csv  train_results.csv
case_studies/python/test/rbf_multiquadric/: logs.txt  show_case_rbf_multiquadric.py  test_result.csv  train_results.csv
case_studies/python/test/thesis/: logs.txt  show_case_thesis.py  show_case_thesis.yml  test_result.csv  train_results.csv
experiments/: README.md
experiments/commons/: regressors.py  util.py
experiments/synthetic/: README.md
experiments/synthetic/data/: data.csv  generator.py
experiments/synthetic/models/: plots.ipynb
experiments/synthetic/models/ann/: logs  loss_hist_1.csv  loss_hist_10.csv  loss_hist_11.csv  loss_hist_12.csv  loss_hist_13.csv  loss_hist_14.csv  loss_hist_15.csv  loss_hist_16.csv  loss_hist_17.csv  loss_hist_18.csv  loss_hist_19.csv  loss_hist_2.csv  loss_hist_20.csv  loss_hist_3.csv  loss_hist_4.csv  loss_hist_5.csv  loss_hist_6.csv  loss_hist_7.csv  loss_hist_8.csv  loss_hist_9.csv  results.csv  runner.py
experiments/synthetic/models/elasticnet/: hyperparameter_search.ipynb  logs  results.csv  runner.py
experiments/yelp/: README.md
experiments/yelp/data/: 01_data_modelling.ipynb  02_feature_extraction.ipynb  03_feature_selection.ipynb
experiments/yelp/models/: plots.ipynb
experiments/yelp/models/ann/: logs  (+22 more)
rsqtoa/: __init__.py  default.yml  model_wrapper.py  regressors.py  rsqtoa.py  rsqtoa_args.py  rsqtoa_config.py  rsqtoa_exponential_regression.py  rsqtoa_fd.py  rsqtoa_periodic_regression.py  rsqtoa_sampling.py  rsqtoa_statistics.py  rsqtoa_subspace_regression.py  rsqtoa_subspace_tree.py  rsqtoa_taylor_regression.py  util.py
rsqtoa/codegen/: __init__.py  rsqtoa_codegen.py  rsqtoa_codegen_config.py  rsqtoa_format.py  rsqtoa_meta.py  rsqtoa_original_model.py  rsqtoa_reduced_model.py  rsqtoa_replacements.py
rsqtoa/codegen/templates/: cpp_binding.tp  model_info_cxx.tp  reduced_model_cxx.tp  reduced_model_cxx_header.tp  reduced_model_cxx_regressions.tp  reduced_model_python.tp
rsqtoa/fapprox/: PlottingFormatter.py  rsqtoa_fapprox.py  rsqtoa_fapprox_config.py  rsqtoa_tf_function_approximator.py  rsqtoa_tf_models.py  rsqtoa_trainig_data.py
(+108 files in other folders)
