# **************************************************************************** #
# This file is part of the rsqtoa build system. 
#
# Version: 0.1.0
# Author:  Simon Maertens, STCE (info@stce.rwth-aachen.de)
# **************************************************************************** #

# **************************************************************************** #
# Build case studies
# **************************************************************************** #
add_subdirectory(cpp)
